Changelog for Zodiac

Version 1.1 Changes:
- Star colors can now be customized, the color is indicated by a smaller circle in the middle of the system
- Three more mirror-modes (slash, backslash, center) which can be combined with the previous mirror modes allowing you
  to place up to 8 systems symmetrically with a single click; systems that end up outside of the galaxy will not be
  placed (this can happen because the galaxy has a rectangular shape but not a quadratic one)
- Added diagonal crosshair to better support mirror-modes
- 'Large / Cluster' Galaxies are now separated into Large and Cluster. Cluster is the same size as large but allows for
  71 star systems instead of 54
- Cosmetic changes: darker appearance, shortened some range indicator descriptions, adjusted layout
- Established a small minimum distance to other systems when placing new ones in order to prevent accidentally placing
  duplicates (almost) on top of each other, especially when mirroring placements
- Fixed drawing-order issue: crosshair (and grid) do not draw wormhole lines and selection markers anymore
- When loading a galaxy: fixed current system placement type selection being overwritten (without selecting the button)

Version 1.1 Backwards Compatibility:
- Previous Large/Cluster Galaxies were actually large galaxies, they are now converted to cluster galaxies when loaded.
- Previous saved stars are treated as 'Random' color (which they were already before) when loaded.